# case-switcher-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: unit_tests.rs
