[package]
name = "case-switcher"
version = "1.0.3"
edition = "2021"
description = "Library to change the casing of strings."
keywords = ["string", "case", "casing"]
license = "Apache-2.0"
repository = "https://gitlab.com/mburkard/case-switcher-rs"
readme = "README.md"

[dependencies]
regex = "1.7.1"
